# alphagenome_modal

./: .gitignore  README.md  pixi.toml  plan.md  pyproject.toml
alphagenome-pytorch/: .gitignore  ARCHITECTURE_COMPARISON.md  CLAUDE.md  README.md  RELEASING.md  pyproject.toml
alphagenome-pytorch/.github/workflows/: integration_tests.yml  jax_tests.yml  publish.yml  tests.yml
alphagenome-pytorch/docs/: conf.py  full_chromosome_prediction.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
alphagenome-pytorch/docs/api/: index.rst  layers.rst  model.rst  training.rst
alphagenome-pytorch/docs/finetuning/: adapters.rst  api_reference.rst  cli.rst  index.rst  python_api.rst
alphagenome-pytorch/examples/notebooks/: TAL1_variant_effect_and_ISM.ipynb  alphagenome_pytorch_demo.ipynb  finetune_encoder_only.ipynb  finetune_linear_probe.ipynb  in_silico_mutagenesis.ipynb  variant_scoring.ipynb
alphagenome-pytorch/scripts/: README.md  benchmark_performance.py  compare_models.py  convert_bigwigs_to_mmap.py  convert_borzoi_folds.py  convert_gtf_to_parquet.py  convert_weights.py  demo_manual_extraction.py  extract_track_means.py  extract_track_metadata.py  finetune.py  predict_full_chromosome.py  preprocess_polya.py  simple_compare.py  validate_weight_mapping.py  verify_model.py
alphagenome-pytorch/src/alphagenome_pytorch/: __init__.py  attention.py  config.py  convolutions.py  embeddings.py  heads.py  layers.py  losses.py  metrics.py  model.py  training.py
alphagenome-pytorch/src/alphagenome_pytorch/extensions/: __init__.py
alphagenome-pytorch/src/alphagenome_pytorch/extensions/finetuning/: README.md  __init__.py  adapters.py  checkpointing.py  data_transforms.py  datasets.py  distributed.py  heads.py  logging.py  training.py  transfer.py  utils.py
alphagenome-pytorch/src/alphagenome_pytorch/extensions/inference/: __init__.py  full_chromosome.py
alphagenome-pytorch/src/alphagenome_pytorch/jax_compat/: __init__.py  transforms.py  weight_mapping.py
alphagenome-pytorch/src/alphagenome_pytorch/utils/: __init__.py  sequence.py  splicing.py
alphagenome-pytorch/src/alphagenome_pytorch/variant_scoring/: README.md  __init__.py  aggregations.py  annotations.py  inference.py  sequence.py  types.py  visualization_utils.py
alphagenome-pytorch/src/alphagenome_pytorch/variant_scoring/scorers/: __init__.py  base.py  center_mask.py  contact_map.py  gene_mask.py  polyadenylation.py  splicing.py
alphagenome-pytorch/tests/: README.md  conftest.py  create_mock_data.py  gradient_alignment.py  gradient_utils.py  layer_utils.py
alphagenome-pytorch/tests/integration/: api_utils.py  conftest.py  test_all_19_scorers.py  test_backward.py  test_checkpoint_roundtrip.py  test_determinism.py  test_finetuning_heads_integration.py  test_finetuning_modes.py  test_finetuning_pipeline.py  test_predict.py  test_variant_scoring.py
alphagenome-pytorch/tests/integration_jax/: __init__.py  comparison_utils.py  conftest.py  fixture_utils.py  test_contact_maps.py  test_genomic_tracks.py  test_gradient_ladder.py  test_splicing.py  test_training_loss_parity.py
alphagenome-pytorch/tests/jax_comparison/: conftest.py  test_gradients_jax.py  test_layers_jax.py  test_losses_jax.py  test_pure_functions_jax.py
alphagenome-pytorch/tests/unit/: test_adapters.py  test_attention.py  test_config.py  test_data_transforms.py  test_finetune_multitask.py  test_finetuning_datasets.py  test_finetuning_heads.py  test_finetuning_training.py  test_heads.py  test_losses.py  test_metrics.py  test_onehot_encoding.py  test_training.py  test_transfer.py  test_transforms.py
modal_alphagenome/alphagenome_research/: CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
modal_alphagenome/alphagenome_research/colabs/: quick_start.ipynb  variant_eval_examples.ipynb
modal_alphagenome/alphagenome_research/src/alphagenome_research/io/: dataset.py  fasta.py  genome.py  genome_test.py  splicing_test.py
modal_alphagenome/alphagenome_research/src/alphagenome_research/io/testdata/: example.fa  example.fa.fai
modal_alphagenome/alphagenome_research/src/alphagenome_research/model/: __init__.py  attention_test.py  augmentation_test.py  convolutions.py  dna_model.py  heads_test.py  layers_test.py  model.py  one_hot_encoder.py  one_hot_encoder_test.py  schemas.py
modal_alphagenome/alphagenome_research/src/alphagenome_research/model/interval_scoring/: __init__.py  gene_mask.py  gene_mask_test.py
modal_alphagenome/alphagenome_research/src/alphagenome_research/model/metadata/: OutputMetadataResponse_ORGANISM_MUS_MUSCULUS.textproto  __init__.py  metadata_test.py
(+55 files in other folders)
